# songbirdapi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: docker.yml
scripts/: migrate_redis_to_postgres.py  seed_dev.py  verify_migration.py
songbirdapi/: crud.py  database.py  dbclient.py  dependencies.py  models.py  requirements.txt  requirements.txt.blank  security.py  server.py  settings.py  version.py
songbirdapi/api/routers/: songs.py  youtube.py
songbirdapi/routers/: admin.py  auth.py  downloads.py  itunes.py  library.py  properties.py  songs.py
tests/integration/: conftest.py  test_auth.py  test_library.py
tests/unit/: test_security.py
