[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "songbirdapi"
authors = [
    {name = "Christian Boin"},
]
version = "0.0.6"
description = "Music download api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "uvicorn",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "PyJWT",
    "bcrypt",
    "songbirdcore",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "click",
    "pytest",
    "pytest-cov",
    "redis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["songbirdapi*"]
